--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -61,6 +61,14 @@
 <body>
 
 
+<a name="version-1.4"></a>
+<h1>Version 1.4</h1>
+
+<ul>
+	<li>Previous versions sometimes truncated large XML documents in some cases, especially when
+	loading from a slow server or over a slow connection. The problem is fixed in this version.</li>
+</ul>
+
 <a name="version-1.3"></a>
 <h1>Version 1.3</h1>
 
