--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -65,7 +65,7 @@
 <h1>Version 1.4</h1>
 
 <ul>
-	<li>Previous versions sometimes truncated large XML documents in some cases, especially when
+	<li>Previous versions sometimes truncated large XML documents, especially when
 	loading from a slow server or over a slow connection. The problem is fixed in this version.</li>
 </ul>
 
