user-supplied CSS and JS integrated

--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -61,6 +61,17 @@
 <body>
 
 
+<a name="version-1.5"></a>
+<h1>Version 1.5</h1>
+
+<ul>
+	<li>There is a new formatting option that colorizes the XML. It’s also interactive and lets you click on the names of elements with mixed content to hide or show the content. Because this option presents a logical view of the document that does not always match the exact XML data sent by the server, the two old formatting options, which are closer to the original data, are still there. They have been renamed in the action menu, the three options are now called “View Raw”, “View Formatted” and “View Formatted and Styled”.</li>
+	<li>The new formatting option is based on HTML/CSS/JavaScript. You get access to the the CSS and JavaScript code in the new Preferences dialog so you can tweak it according to your needs. Prototype JS version 1.6.0.3 gets loaded into the page. If you come up with something interesting, make sure to share your code, e.g. on <a href="http://gist.github.com/">Gist</a>. I will collect useful information
+	for CSS/JavaScript customization on the plugin’s <a href="http://www.entropy.ch/software/macosx/xmlviewplugin/#customization">web site</a>.</li>
+	<li>Safari 4 Beta compatibility fix: the Find panel works now.</li>
+</ul>
+
+
 <a name="version-1.4"></a>
 <h1>Version 1.4</h1>
 
@@ -68,6 +79,7 @@
 	<li>Previous versions sometimes truncated large XML documents, especially when
 	loading from a slow server or over a slow connection. The problem is fixed in this version.</li>
 </ul>
+
 
 <a name="version-1.3"></a>
 <h1>Version 1.3</h1>
@@ -77,6 +89,7 @@
 	<li>The ⌘-E keyboard shortcut for “Use Selection for Find” now works, it didn’t in previous versions. Unfortunately, picking the command from the menu bar with the mouse still doesn’t work because I can’t intercept that event. That is probably not a common use case anyway.</li>
 	<li>Improved the description of the plugin and its MIME types in the list displayed by Help > Installed Plug-ins.</li>
 </ul>
+
 
 <a name="version-1.2"></a>
 <h1>Version 1.2</h1>
