final CSS/JS tweaks before 1.5 release

--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -76,13 +76,14 @@
 
 		<p><img src='http://www.entropy.ch/software/macosx/xmlviewplugin/view-formatted-styled.png'/></p>
 
-		<p>This view is interactive and lets you click on the names of elements with mixed content to hide or show the content.</p>
+		<p>This view is interactive and lets you click on tag names of elements with mixed content to collapse or expand the children. In the example above, the <code>sub</code> element is collapsed.</p>
 
 		<p>Because this option presents a logical view of the document that does not match the XML data sent by the server byte-for-byte, the two old formatting options, which present the original data more faithfully, are still there. They have been renamed in the action menu, the three options are now called “View Raw”, “View Formatted” and “View Formatted and Styled”.</p>
 	</li>
 
-	<li>The new formatting option is based on HTML/CSS/JavaScript. You get access to the the CSS and JavaScript code in the new Preferences dialog so you can tweak it according to your needs. This customization can range from simple syntax coloring color changes to highly interactive mini applications customized for your particular XML format. I will collect useful information
-	for CSS/JavaScript customization on the plugin’s <a href="http://www.entropy.ch/software/macosx/xmlviewplugin/#customization">web page</a>.</li>
+	<li>The new formatting option is based on HTML, CSS and JavaScript. You get access to the CSS and JavaScript code in a new Preferences dialog where you can customize it according to your needs. Such customization can range from simple syntax coloring color changes to highly interactive mini applications for your particular XML format. I will collect information
+	for CSS/JavaScript customization on the <a href="http://www.entropy.ch/software/macosx/xmlviewplugin/#customization">plugin’s web page</a>.</li>
+	
 	<li>The Find panel now works in Safari 4 Beta.</li>
 </ul>
 
