--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -67,6 +67,17 @@
 <body>
 
 
+<a name="version-1.6"></a>
+<h1>Version 1.6</h1>
+
+<ul>
+	<li>The default JavaScript code now lets you Option-click on a tag name to recursively collapse/expand all child elements. This is useful if you Option-click first to collapse deeply and then do a regular click on the same element to expand again. This will leave all childs collapsed. This often helps when viewing big documents with long lists. Note that you must restore the default JavaScript code with the Reset button to get the new version if you have previously customized the code.</li>
+	<li>JavaScript errors and exceptions are now displayed, making debugging easier.</li>
+	<li>Using the <code>alert()</code> function in JavaScript customization code shows the alert message in an alert sheet in addition to logging it to the system console.</li>
+	<li>Preferences and About panels are now closed when the XML page is closed or reloaded, preventing orphaned or duplicate windows.</li>
+	<li>Undo now works in the CSS and JS text boxes.</li>
+</ul>
+
 <a name="version-1.5"></a>
 <h1>Version 1.5</h1>
 
