--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -7,6 +7,7 @@
 	<style type='text/css'>
 		body {
 			font-family: 'Georgia';
+			font-size: 14px;
 			margin: 20px;
 		}
 		
@@ -66,6 +67,13 @@
 </head>
 <body>
 
+
+<a name="version-1.7"></a>
+<h1>Version 1.7</h1>
+
+<ul>
+	<li>CSS tweaks related to collapsed elements. Note that you must restore the default CSS code with the Reset button to get the new version if you have previously customized the code.</li>
+</ul>
 
 <a name="version-1.6"></a>
 <h1>Version 1.6</h1>
