xml & and < escaping XSLT

--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -72,7 +72,8 @@
 <h1>Version 1.7</h1>
 
 <ul>
-	<li>CSS tweaks related to collapsed elements. Note that you must restore the default CSS code with the Reset button to get the new version if you have previously customized the code.</li>
+	<li>CSS improvements related to collapsed elements. Note that you must restore the default CSS code with the Reset button in the preferences panel to get the new version if you have previously customized the code.</li>
+	<li>&amp; and &lt; are now displayed as &amp;amp; and &amp;lt;</li>
 </ul>
 
 <a name="version-1.6"></a>
