--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -68,6 +68,13 @@
 <body>
 
 
+<a name="version-1.8"></a>
+<h1>Version 1.8</h1>
+
+<ul>
+	<li>Safari now relaunches after an auto-update of the plugin, thanks to <a href='http://0xced.blogspot.com/'>Cédric Luthi</a> for the fix.</li>
+</ul>
+
 <a name="version-1.7"></a>
 <h1>Version 1.7</h1>
 
