--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -68,6 +68,13 @@
 <body>
 
 
+<a name="version-1.9"></a>
+<h1>Version 1.9</h1>
+
+<ul>
+	<li>Yay JSON support! XML View Plugin now registers for and formats JSON data in addition to XML, an often requested feature. Thanks to <a href='http://github.com/juanger'>Juan Germán Castañeda Echevarría</a> who did all the work. Send Juan a thank you note if you like JSON support :-)</li>
+</ul>
+
 <a name="version-1.8"></a>
 <h1>Version 1.8</h1>
 
