--- a/Resources/release-notes.html
+++ b/Resources/release-notes.html
@@ -68,6 +68,13 @@
 <body>
 
 
+<a name="version-2.0"></a>
+<h1>Version 2.0</h1>
+
+<ul>
+	<li>Small fix for JSON rendering so it doesn’t escape &lt; and &amp; characters (GitHub <a href='http://github.com/liyanage/webkit-xmlview-plugin/issues/5'>issue #5</a>)</li>
+</ul>
+
 <a name="version-1.9"></a>
 <h1>Version 1.9</h1>
 
